--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,3 @@
-{% comment %}
-  Base template for the full site. All other pages should extend from here.
-{% endcomment %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -23,17 +20,7 @@
   {## HEAD JS - deferred scripts only! ##}
   {# FontAwesome SVG styles #}
   <script defer src="{% static 'vendor/fontawesome-free-5.15.4/js/all.min.js' %}"></script>
-  {% comment %}
-    FontAwesome can be served via CDN from their website.
-    However, their CDN support is on a per-account basis. In order to use a CDN,
-    you must create an account on fontawesome.com and request a kit.
 
-    If you choose that route, you may safely remove the local files from this project
-    and serve via your own CDN kit.
-
-    The code, icons, and other FontAwesome files are covered by licenses as detailed here:
-    https://fontawesome.com/license/free
-  {% endcomment %}
 
   {% block head_js %}{% endblock head_js %}
 
@@ -46,9 +33,12 @@
     {% include "widgets/base_navbar.html" %}
   </header>
   
-
+  
   {# All main content resides within a container #}
   <main role="main" class="container {% block body_container_classes %}{% endblock %}">
+    {% block navbar_section %}
+    {% endblock %}
+    
     {% block body_content %}{% endblock %}
   </main>
 
