--- a/templates/dbs.html
+++ b/templates/dbs.html
@@ -12,36 +12,11 @@
 
 {# Add classes to the main <div> wrapping body content #}
 {% block body_container_classes %}mx-0 w-100 mw-100{% endblock %}
-
+{% block navbar_section %}
+   {% include 'widgets/dbs/navbar.html' %}
+{% endblock %}
 {% block body_content %}
-{# All your page content goes here! #}
-   <div class="container-fluid">
-      <div class="row">
-         {# Contenido Izquierda #}
-         <div class="col-sm-12 col-md-8">
-            {% if db_type == 'ventilador' %}
-               {% include "widgets/dbs/ventilador.html" %}
-            {% elif db_type == 'curva_diseno' %}
-               {% include "widgets/dbs/curvaDiseno.html" %}
-            {% elif db_type == 'ducto' %}
-               {% include "widgets/dbs/ducto.html" %}
-            {% elif db_type == 'equip_diesel' %}
-               {% include "widgets/dbs/equipDiesel.html" %}
-            {% else %}
-               {% include "widgets/dbs/ventilador.html" %}
-            {% endif %}
-         </div>
-
-         {# Contenido Derecha #}
-         <div class="col-4">
-            <div class="row justify-content-center align-items-center">
-               <div class="col-12 col-md-10 col-xl-8">
-
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
+   
 {% endblock %}
 
 {% block body_js %}
