--- a/templates/fanDesign.html
+++ b/templates/fanDesign.html
@@ -93,6 +93,12 @@
                   </div>
                   <div class="list-group border border-3 border-warning p-3 mb-2">
                      <div class="row">
+                        <p class="text-start fs-5 m-0 fw-bold">Design Desing</p>
+                        <p class="text-start fs-6  ps-4 m-1"> {{proyecto.curva_diseno.densidad}} kg/m<sup>3</sup> </p>
+                     </div>
+                  </div>
+                  <div class="list-group border border-3 border-warning p-3 mb-2">
+                     <div class="row">
                         <p class="text-start fs-5 m-0 fw-bold">Motor Power</p>
                         <p class="text-start fs-6  ps-4 m-1">  {{proyecto.curva_diseno.densidad}} </p>
                      </div>
