--- a/templates/settings.html
+++ b/templates/settings.html
@@ -13,33 +13,12 @@
 {# Add classes to the main <div> wrapping body content #}
 {% block body_container_classes %}mx-0 w-100 mw-100{% endblock %}
 
+{% block navbar_section %}
+   {% include 'widgets/settings/navbar.html'  %}
+{% endblock %}
+
 {% block body_content %}
-{# All your page content goes here! #}
-   <div class="container-fluid">
-      <div class="row-md-8 row-sm-12">
-         {# Contenido Izquierda #}
-         <div class="col-md-8 col-sm-12">
-            {% if setting_type == 'current_project' %}
-               {% include "widgets/settings/currentProject.html" %}
-            {% elif setting_type == 'new_project' %}
-               {% include "widgets/settings/newProject.html" %}
-            {% elif setting_type == 'new_dbs' %}
-               {% include "widgets/settings/newDbs.html" %}
-            {% else %}
-               {% include "widgets/settings/currentProject.html" %}
-            {% endif %}
-         </div>
 
-         {# Contenido Derecha #}
-         <div class="col-4">
-            <div class="row justify-content-center align-items-center">
-               <div class="col-12 col-md-10 col-xl-8">
-
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
 {% endblock %}
 
 {% block body_js %}
